--- a/Natours Website project/index.html
+++ b/Natours Website project/index.html
@@ -390,8 +390,7 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="#" class="footer__link">nobody</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
-                        Copyright &copy; by nobody.
+                        Copyright &copy; by Natours
                     </p>
                 </div>
             </div>
